[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "qdatamatrix"
authors = [
    {name = "Sebastiaan Mathôt", email = "s.mathot@cogsci.nl"}
]
readme = "readme.md"
license = {file = "COPYING"}
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = ["datamatrix"]
keywords = ["data scienc3", "pyqt", "widget", "spreadsheet"]
[tool.flit.sdist]
exclude = [".github"]
[project.urls]
Documentation = "https://github.com/open-cogsci/qdatamatrix"
Source = "https://github.com/open-cogsci/qdatamatrix"
